--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -6,6 +6,7 @@
   --classic-blue: #0F4C81;
   --white: #fff;
   --transparent: transparent;
+  --yellow: #f6eb61;
 
   //Spacing
   --spacing-medium: 1rem;
