--- a/styles/Header.scss
+++ b/styles/Header.scss
@@ -2,9 +2,10 @@
 
 .wrap {
   font-size: 0;
-  top: 0;
-  padding-top: var(--spacing-medium);
-  position: sticky;
+  left: var(--spacing-medium);
+  position: fixed;
+  right: var(--spacing-medium);
+  top: var(--spacing-medium);
   z-index: 9999;
 }
 
@@ -25,5 +26,65 @@
 }
 
 .btn-text {
-  color: white;
+  color: var(--baby-blue);
+  font-size: 1.25rem;
+  font-weight: 500;
+  line-height: 1;
+}
+
+.scrolled .btn-text > span:last-child {
+  transition: opacity .6s cubic-bezier(.45,.05,.55,.95);
+  opacity: 0;
+}
+
+.name {
+  font-size: 1.25rem;
+  font-weight: 500;
+  line-height: 1;
+  margin: var(--spacing-none);
+}
+
+.name-text {
+  color: var(--yellow);
+  display: block;
+  position: relative;
+  text-decoration: none;
+}
+
+.cph > span {
+  right: 0;
+  transition: transform .6s cubic-bezier(.45,.05,.55,.95);
+  transform-origin: right top;
+  position: absolute;
+}
+
+.cph > span:first-child {
+  transform: rotate(-90deg) translateY(-1.25rem) translateX(.25rem);
+  opacity: 100;
+  & > span {
+    visibility: hidden;
+  }
+}
+
+.scrolled {}
+
+.scrolled .cph > span:first-child { opacity: 0; }
+
+.cph > span:last-child {
+  transform: rotate(-65deg) translateY(-1.25rem) translateX(-.25rem);
+}
+
+.scrolled .cph > span:last-child { transform: unset; }
+
+.cph2 > span:first-child {
+  transition: opacity .6s cubic-bezier(.45,.05,.55,.95);
+  opacity: 0;
+}
+
+.scrolled .cph2 > span:first-child { opacity: 1; }
+
+.cph2 > span:last-child { visibility: hidden; }
+
+.cph:focus > span, .cph2:focus > span {
+  text-decoration: underline;
 }
