--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -9,6 +9,8 @@
   --yellow: #f6eb61;
 
   //Spacing
+  --spacing-extra-extra-large: 8rem;
+  --spacing-large: 2rem;
   --spacing-medium: 1rem;
   --spacing-none: 0rem;
 }
