--- a/styles/body.scss
+++ b/styles/body.scss
@@ -1,6 +1,7 @@
 // styles/body.scss
 
 @import 'variables';
+@import 'mixins';
 
 body {
   font-family: Neue Haas Grotesk, Helvetica, Arial, sans-serif;
