--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -12,5 +12,7 @@
   --spacing-extra-extra-large: 8rem;
   --spacing-large: 2rem;
   --spacing-medium: 1rem;
+  --spacing-small: .5rem;
+  --spacing-extra-small: .25rem;
   --spacing-none: 0rem;
 }
