--- a/styles/Header.scss
+++ b/styles/Header.scss
@@ -1,19 +1,21 @@
 // Header.scss
 
-.wrap {
-  font-size: 0;
-  left: var(--spacing-medium);
-  position: fixed;
-  right: var(--spacing-medium);
-  top: var(--spacing-medium);
-  z-index: 9999;
-}
+$max-width: 999px;
 
-.flex {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
+// .wrap {
+//   font-size: 0;
+//   left: var(--spacing-medium);
+//   position: fixed;
+//   right: var(--spacing-medium);
+//   top: var(--spacing-medium);
+//   z-index: 9999;
+// }
+
+// .flex {
+//   display: flex;
+//   justify-content: space-between;
+//   width: 100%;
+// }
 
 .btn {
   background: none;
@@ -45,53 +47,81 @@
   opacity: 0;
 }
 
-.name {
-  font-size: 1.25rem;
-  font-weight: 500;
-  line-height: 1;
-  margin: var(--spacing-none);
-  margin-left: auto;
-}
+// .name {
+//   font-size: 1.25rem;
+//   font-weight: 500;
+//   line-height: 1;
+//   margin: var(--spacing-none);
+//   margin-left: auto;
+// }
+//
+// .name-text {
+//   color: var(--yellow);
+//   display: block;
+//   position: relative;
+//   text-decoration: none;
+// }
 
-.name-text {
-  color: var(--yellow);
-  display: block;
-  position: relative;
-  text-decoration: none;
-}
+// .cph > span {
+//   right: 0;
+//   transition: transform .6s cubic-bezier(.45,.05,.55,.95);
+//   transform-origin: right top;
+//   position: absolute;
+// }
+//
+// .cph > span:first-child {
+//   transform: rotate(-90deg) translateY(-1.25rem) translateX(.25rem);
+//   opacity: 100;
+//   & > span {
+//     visibility: hidden;
+//   }
+// }
+//
+// .scrolled .cph > span:first-child { opacity: 0; }
+//
+// .cph > span:last-child {
+//   transform: rotate(-65deg) translateY(-1.25rem) translateX(-.25rem);
+// }
+//
+// .scrolled .cph > span:last-child { transform: unset; }
+//
+// .cph2 > span:first-child {
+//   transition: opacity .6s cubic-bezier(.45,.05,.55,.95);
+//   opacity: 0;
+// }
+//
+// .scrolled .cph2 > span:first-child { opacity: 1; }
+//
+// .cph2 > span:last-child { visibility: hidden; }
+//
+// .cph:focus > span, .cph2:focus > span {
+//   text-decoration: underline;
+// }
 
-.cph > span {
+.bottom {
+  bottom: 0;
+  display: flex;
+  height: 10rem;
+  justify-content: center;
+  left: 0;
   right: 0;
-  transition: transform .6s cubic-bezier(.45,.05,.55,.95);
-  transform-origin: right top;
-  position: absolute;
+  position: fixed;
+  z-index: 9999;
 }
 
-.cph > span:first-child {
-  transform: rotate(-90deg) translateY(-1.25rem) translateX(.25rem);
-  opacity: 100;
-  & > span {
-    visibility: hidden;
+.inner {
+  justify-content: space-between;
+  display: flex;
+  max-width: $max-width;
+  width: 100%;
+}
+
+.name {
+  font-size: 2rem;
+  font-weight: 400;
+  line-height: 1;
+  & a {
+    color: white;
+    text-decoration: none;
   }
-}
-
-.scrolled .cph > span:first-child { opacity: 0; }
-
-.cph > span:last-child {
-  transform: rotate(-65deg) translateY(-1.25rem) translateX(-.25rem);
-}
-
-.scrolled .cph > span:last-child { transform: unset; }
-
-.cph2 > span:first-child {
-  transition: opacity .6s cubic-bezier(.45,.05,.55,.95);
-  opacity: 0;
-}
-
-.scrolled .cph2 > span:first-child { opacity: 1; }
-
-.cph2 > span:last-child { visibility: hidden; }
-
-.cph:focus > span, .cph2:focus > span {
-  text-decoration: underline;
 }
