--- a/styles/Layout.scss
+++ b/styles/Layout.scss
@@ -1,16 +1,38 @@
 // styles/Layout.scss
 
 @import 'mixins';
+$max-width: 999px;
+
+.body {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  width: 100%;
+}
+
+.container {
+  position: relative;
+  max-width: $max-width;
+  width: 100%;
+}
 
 .wrap {
   background-color: var(--classic-blue);
   bottom: 0;
+  display: flex;
   font-size: 0;
+  justify-content: center;
   left: 0;
   right: 0;
   top: 0;
   position: fixed;
   z-index: 0;
+}
+
+.inner {
+  height: 100%;
+  max-width: $max-width;
+  width: 100%;
 }
 
 .line {
@@ -19,39 +41,40 @@
   padding: var(--spacing-none);
   position: relative;
   vertical-align: top;
-  width: calc(100% / 12 * 1);
-  @include for-not-small {
-    width: calc(100% / 12 * 2) !important;
-  }
+  // width: calc(100% / 12 * 1);
+  width: calc(100% / 12 * 2);
+  // @include for-not-small {
+  //   width: calc(100% / 12 * 2) !important;
+  // }
   &.wide {
-    width: calc(100% / 12 * 5);
+    // width: calc(100% / 12 * 5);
   }
 }
 
 .line::after {
-  border-right: 1px solid var(--baby-blue);
+  border-right: 2px solid white;
   bottom: 0;
   content: '';
   right: 0;
   top: 0;
   transform: scaleY(0);
   transform-origin: center top;
-  transition: transform 1.2s cubic-bezier(.45,.05,.55,.95);
+  transition: transform .9s cubic-bezier(.45,.05,.55,.95);
+  opacity: .5;
   position: absolute;
 }
 
 .ready .line::after { transform: scaleY(1); }
 
-.line:nth-child(1)::after { transition-delay: .3s; }
-.line:nth-child(2)::after { transition-delay: .6s; }
-.line:nth-child(3)::after { transition-delay: .9s; }
-.line:nth-child(4)::after { transition-delay: 1.2s; }
-.line:nth-child(5)::after { transition-delay: 1.5s; }
+.line:nth-child(1)::after { transition-delay: .2s; }
+.line:nth-child(2)::after { transition-delay: .4s; }
+.line:nth-child(3)::after { transition-delay: .6s; }
+.line:nth-child(4)::after { transition-delay: .8s; }
+.line:nth-child(5)::after { transition-delay: 1s; }
 .line:last-child::after { content: none; }
 
 main {
   height: 100%;
-  max-width: 32rem;
   min-height: 100vh;
   overflow: hidden;
   position: relative;
@@ -60,6 +83,8 @@ main {
 }
 
 section {
+  display: flex;
+  justify-content: center;
   margin-top: var(--spacing-extra-extra-large);
 }
 
@@ -69,3 +94,8 @@ h3 { font-size: 1.5rem; }
 h4 { font-size: 1.25rem; }
 h5 { font-size: 1rem; }
 h6 { font-size: .875rem; }
+
+.narrow {
+  max-width: 32rem;
+  width: 100%;
+}
