--- a/styles/body.scss
+++ b/styles/body.scss
@@ -4,7 +4,7 @@
 @import 'mixins';
 
 body {
-  font-family: Neue Haas Grotesk, Helvetica, Arial, sans-serif;
+  font-family: Soehne, Helvetica, Arial, sans-serif;
   padding-left: var(--spacing-medium);
   padding-right: var(--spacing-medium);
 }
