--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -53,3 +53,131 @@
   font-weight: 700;
   font-style: italic;
 }
+
+@font-face {
+  font-family: 'Soehne';
+  font-display: fallback;
+  src: url('/fonts/soehne-test-extraleicht.woff') format('woff');
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Soehne';
+  font-display: fallback;
+  src: url('/fonts/soehne-test-extraleicht-kursiv.woff') format('woff');
+  font-weight: 200;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Soehne';
+  font-display: fallback;
+  src: url('/fonts/soehne-test-leicht.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Soehne';
+  font-display: fallback;
+  src: url('/fonts/soehne-test-leicht-kursiv.woff') format('woff');
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Soehne';
+  font-display: fallback;
+  src: url('/fonts/soehne-test-buch.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Soehne';
+  font-display: fallback;
+  src: url('/fonts/soehne-test-buch-kursiv.woff') format('woff');
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Soehne';
+  font-display: fallback;
+  src: url('/fonts/soehne-test-kraftig.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Soehne';
+  font-display: fallback;
+  src: url('/fonts/soehne-test-kraftig-kursiv.woff') format('woff');
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Soehne';
+  font-display: fallback;
+  src: url('/fonts/soehne-test-halbfett.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Soehne';
+  font-display: fallback;
+  src: url('/fonts/soehne-test-halbfett-kursiv.woff') format('woff');
+  font-weight: 600;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Soehne';
+  font-display: fallback;
+  src: url('/fonts/soehne-test-dreiviertelfett.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Soehne';
+  font-display: fallback;
+  src: url('/fonts/soehne-test-dreiviertelfett-kursiv.woff') format('woff');
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Soehne';
+  font-display: fallback;
+  src: url('/fonts/soehne-test-fett.woff') format('woff');
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Soehne';
+  font-display: fallback;
+  src: url('/fonts/soehne-test-fett-kursiv.woff') format('woff');
+  font-weight: 800;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Soehne';
+  font-display: fallback;
+  src: url('/fonts/soehne-test-extrafett.woff') format('woff');
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Soehne';
+  font-display: fallback;
+  src: url('/fonts/soehne-test-extrafett-kursiv.woff') format('woff');
+  font-weight: 900;
+  font-style: italic;
+}
