--- a/styles/Header.scss
+++ b/styles/Header.scss
@@ -1,5 +1,6 @@
 // Header.scss
 
+@import 'mixins';
 $max-width: 999px;
 
 // .wrap {
@@ -127,7 +128,10 @@ $max-width: 999px;
 
 .name {
   font-size: 1.6rem;
-  font-weight: 400;
+  @include for-not-small {
+    font-size: 2rem;
+  }
+  font-weight: 300;
   letter-spacing: -1.2px;
   line-height: 1;
   & a {
