--- a/styles/Layout.scss
+++ b/styles/Layout.scss
@@ -83,17 +83,41 @@ main {
 }
 
 section {
-  display: flex;
-  justify-content: center;
   margin-top: var(--spacing-extra-extra-large);
 }
 
-h1 { font-size: 3rem; }
-h2 { font-size: 2.25rem; font-weight: 500; }
+section:last-child {
+  margin-bottom: var(--spacing-extra-extra-large);
+}
+
+h1 {
+  font-size: 3rem;
+  margin-bottom: 3rem;
+  margin-top: 3rem;
+}
+h2 {
+  font-size: 2.25rem;
+  font-weight: 300;
+  letter-spacing: -1.2px;
+  margin-bottom: 2.25rem;
+  margin-top: 2.25rem;
+}
 h3 { font-size: 1.5rem; }
 h4 { font-size: 1.25rem; }
 h5 { font-size: 1rem; }
 h6 { font-size: .875rem; }
+
+p {
+  font-size: 1.25rem;
+  font-weight: 400;
+  letter-spacing: -.5px;
+  line-height: 1.5;
+  margin-bottom: var(--spacing-medium);
+}
+
+img {
+  width: 100%;
+}
 
 .narrow {
   max-width: 32rem;
