--- a/styles/Header.scss
+++ b/styles/Header.scss
@@ -132,7 +132,7 @@ $max-width: 999px;
     font-size: 2rem;
   }
   font-weight: 300;
-  letter-spacing: -1.2px;
+  letter-spacing: -0.05rem;
   line-height: 1;
   & a {
     color: white;
