--- a/styles/Layout.scss
+++ b/styles/Layout.scss
@@ -7,6 +7,7 @@ $max-width: 999px;
   display: flex;
   height: 100%;
   justify-content: center;
+  text-rendering: optimizeLegibility;
   width: 100%;
 }
 
@@ -98,7 +99,7 @@ h1 {
 h2 {
   font-size: 2.25rem;
   font-weight: 300;
-  letter-spacing: -1.2px;
+  letter-spacing: -0.05rem;
   margin-bottom: 2.25rem;
   margin-top: 2.25rem;
 }
@@ -108,15 +109,30 @@ h5 { font-size: 1rem; }
 h6 { font-size: .875rem; }
 
 p {
-  font-size: 1.25rem;
+  font-size: 1rem;
   font-weight: 400;
-  letter-spacing: -.5px;
+  letter-spacing: 0.025rem;
   line-height: 1.5;
   margin-bottom: var(--spacing-medium);
+  margin-top: var(--spacing-medium);
 }
 
 img {
   width: 100%;
+}
+
+sub,
+sup {
+ font-size:75%;
+ line-height:0;
+ position:relative;
+ vertical-align:baseline
+}
+sub {
+ bottom:-.25em
+}
+sup {
+ top:-.5em
 }
 
 .narrow {
