--- a/styles/Layout.scss
+++ b/styles/Layout.scss
@@ -100,6 +100,7 @@ h2 {
   font-size: 2.25rem;
   font-weight: 300;
   letter-spacing: -0.05rem;
+  line-height: 1;
   margin-bottom: 2.25rem;
   margin-top: 2.25rem;
 }
@@ -118,6 +119,8 @@ p {
 }
 
 img {
+  margin-bottom: var(--spacing-large);
+  margin-top: var(--spacing-large);
   width: 100%;
 }
 
