--- a/styles/Header.scss
+++ b/styles/Header.scss
@@ -100,7 +100,7 @@ $max-width: 999px;
 // }
 
 .bottom {
-  background: var(--classic-blue);
+  background: var(--background-color);
   bottom: 0;
   display: flex;
   height: 4rem;
@@ -135,7 +135,7 @@ $max-width: 999px;
   letter-spacing: -0.05rem;
   line-height: 1;
   & a {
-    color: white;
+    color: var(--text-color);
     text-decoration: none;
   }
 }
