--- a/styles/Menu.scss
+++ b/styles/Menu.scss
@@ -6,12 +6,13 @@ $max-width: 999px;
 
 .btn {
   align-items: center;
-  background: white;
-  border-radius: var(--spacing-extra-small);
-  border-style: none;
-  border-width: 0;
+  background: none;
+  border-color: var(--text-color);
+  border-radius: 30% 70% 30% 70% / 30% 70% 30% 70%;
+  border-style: solid;
+  border-width: 2px;
   // bottom: var(--spacing-large);
-  color: var(--classic-blue);
+  color: var(--text-color);
   cursor: pointer;
   display: flex;
   height: 2.4rem;
@@ -25,8 +26,8 @@ $max-width: 999px;
   width: 4.8rem;
   z-index: 9999;
   @include for-not-small {
-    height: 2.6rem;
-    width: 5.6rem;
+    height: 3rem;
+    width: 6rem;
   }
 }
 
@@ -45,9 +46,10 @@ $max-width: 999px;
   // width: 8rem;
 }
 
-.btn:hover {
-  // background: white;
-  // transition: all .3s cubic-bezier(.45,.05,.55,.95) 0s;
+.btn:hover, .btn:focus, .btn:active {
+  background: var(--text-color);
+  color: var(--background-color);
+  transition: none;
 }
 
 .btn>span {
@@ -106,7 +108,7 @@ $max-width: 999px;
 }
 
 .bg-side {
-  background-color: white;
+  background-color: var(--text-color);
   flex-grow: 1;
   opacity: 0;
 }
@@ -132,8 +134,8 @@ $max-width: 999px;
 }
 
 .line::after {
-  background-color: white;
-  border-right: 1px solid rgba(15, 76, 129, 0.25);
+  background-color: var(--text-color);
+  border-right: 1px solid var(--background-color);
   bottom: 0;
   content: '';
   left: 0;
@@ -172,7 +174,7 @@ $max-width: 999px;
 
 .link {
   clip-path: inset(0 100% 0 0);
-  color: var(--classic-blue);
+  color: var(--background-color);
   font-size: 2.25rem;
   font-weight: 300;
   letter-spacing: $letter-spacing;
