--- a/styles/body.scss
+++ b/styles/body.scss
@@ -6,16 +6,14 @@
 body {
   color: var(--text-color);
   font-family: Soehne, Helvetica, Arial, sans-serif;
-  padding-left: var(--spacing-medium);
-  padding-right: var(--spacing-medium);
 }
 
 main {
   height: 100%;
   min-height: 100vh;
   overflow: hidden;
+  padding: 0 var(--spacing-small);
   position: relative;
-  width: 100%;
   z-index: 1;
 }
 
