--- a/styles/body.scss
+++ b/styles/body.scss
@@ -17,7 +17,7 @@ main {
 }
 
 section {
-  margin: var(--space-6) 0;
+  padding: var(--space-6) 0;
 }
 
 section:last-child {
@@ -27,16 +27,14 @@ section:last-child {
 h1 {
   font-size: 3rem;
   font-weight: 700;
-  margin-bottom: 3rem;
-  margin-top: 3rem;
+  margin: var(--space-6) 0;
 }
 h2 {
   font-size: 2.25rem;
   font-weight: 300;
   letter-spacing: -0.05rem;
   line-height: 1;
-  margin-bottom: 2.25rem;
-  margin-top: 2.25rem;
+  margin: var(--space-5) 0;
 }
 h3 { font-size: 1.5rem; }
 h4 { font-size: 1.25rem; }
@@ -48,8 +46,21 @@ p {
   font-weight: 400;
   letter-spacing: 0.025rem;
   line-height: 1.5;
+  margin-top: var(--space-1);
   margin-bottom: var(--space-3);
-  margin-top: var(--space-3);
+}
+
+a, a:active, a:visited {
+  border-bottom: 2px dotted;
+  color: inherit;
+  display: inline-block;
+  line-height: 95%;
+  text-decoration: none;
+  transition: all 120ms ease-in-out;
+}
+
+a:hover {
+  transform: translateY(-1px);
 }
 
 span {
