--- a/styles/body.scss
+++ b/styles/body.scss
@@ -39,7 +39,12 @@ h2 {
 h3 { font-size: 1.5rem; }
 h4 { font-size: 1.25rem; }
 h5 { font-size: 1rem; }
-h6 { font-size: .875rem; }
+h6 {
+  font-size: 0.7rem;
+  font-weight: 400;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+}
 
 p {
   font-size: 1rem;
@@ -61,13 +66,6 @@ a, a:active, a:visited {
 
 a:hover {
   transform: translateY(-1px);
-}
-
-span {
-  font-size: 0.7rem;
-  font-weight: 400;
-  letter-spacing: 0.1rem;
-  text-transform: uppercase;
 }
 
 sub,
