Setup blog post.

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -55,13 +55,29 @@ h6 {
   text-transform: uppercase;
 }
 
-p {
+p, li {
   font-size: 1rem;
   font-weight: 400;
-  letter-spacing: 0.025rem;
-  line-height: 1.5;
-  margin-top: var(--space-1);
-  margin-bottom: var(--space-3);
+  // letter-spacing: 0.025rem;
+  line-height: 1.6;
+}
+
+p {
+  margin: var(--space-2) 0;
+}
+
+ol, ul {
+  list-style-position: outside;
+  margin: var(--space-2) 0;
+  padding-left: var(--space-4);
+}
+
+ol {
+  list-style-type: decimal;
+}
+
+li {
+  padding-left: var(--space-1);
 }
 
 a, a:active, a:visited {
@@ -89,4 +105,8 @@ sub {
 }
 sup {
  top:-.5em
+}
+
+em {
+  font-style: italic;
 }
