--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -11,11 +11,12 @@
 
   /* REFERENCE COLORS */
   --baby-blue: #bdd6e6;
-  --black: #151515;
+  --black: #1a1a1a;
   --classic-blue: #0F4C81;
-  --white: #fff;
+  --white: #f5f5f5;
   --transparent: transparent;
   --yellow: #f6eb61;
+  --sand: #f9f8f1;
 
   /* DEFAULT COLORS */
   --background-color: var(--white);
