--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -7,7 +7,10 @@
  * ROOT STYLES
  */
 :root {
-  font-size: 16px;
+  font-size: 14px;
+  @media screen and (min-width: 30em) {
+    font-size: 16px;
+  }
 
   /* REFERENCE COLORS */
   --baby-blue: #bdd6e6;
