--- a/styles/global.scss
+++ b/styles/global.scss
@@ -59,11 +59,11 @@ p, li {
   font-size: 1rem;
   font-weight: 400;
   // letter-spacing: 0.025rem;
-  line-height: 1.6;
+  line-height: 1.5rem;
 }
 
 p {
-  margin: var(--space-2) 0;
+  margin: var(--space-3) 0;
 }
 
 ol, ul {
