--- a/styles/global.scss
+++ b/styles/global.scss
@@ -34,32 +34,32 @@ section:last-child {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 3em;
   font-weight: 700;
   margin: var(--space-6) 0;
 }
 h2 {
-  font-size: 2.25rem;
+  font-size: 2.25em;
   font-weight: 400;
-  letter-spacing: -0.05rem;
+  letter-spacing: -0.05em;
   line-height: 1;
   margin: var(--space-5) 0;
 }
-h3 { font-size: 1.5rem; }
-h4 { font-size: 1.25rem; }
-h5 { font-size: 1rem; }
+h3 { font-size: 1.5em; }
+h4 { font-size: 1.25em; }
+h5 { font-size: 1em; }
 h6 {
-  font-size: 0.7rem;
+  font-size: 0.7em;
   font-weight: 400;
-  letter-spacing: 0.1rem;
+  letter-spacing: 0.1em;
   text-transform: uppercase;
 }
 
 p, li {
-  font-size: 1rem;
+  font-size: 1em;
   font-weight: 400;
   // letter-spacing: 0.025rem;
-  line-height: 1.5rem;
+  line-height: 1.5em;
 }
 
 p {
@@ -95,18 +95,28 @@ a:hover {
 
 sub,
 sup {
- font-size:75%;
- line-height:0;
- position:relative;
- vertical-align:baseline
+ font-size: 75%;
+ line-height: 0;
+ position: relative;
+ vertical-align: baseline;
 }
 sub {
- bottom:-.25em
+ bottom: -.25em;
 }
 sup {
- top:-.5em
+ top: -.5em;
 }
 
 em {
   font-style: italic;
+}
+
+pre {
+  margin: var(--space-4) 0 !important;
+}
+
+code {
+  font-family: Consolas, Monaco, monospace;
+  font-size: .8rem;
+  line-height: 1.25;
 }
