--- a/styles/global.scss
+++ b/styles/global.scss
@@ -35,13 +35,13 @@ section:last-child {
 
 h1 {
   font-size: 3em;
-  font-weight: 700;
+  font-weight: 600;
   margin: var(--space-6) 0;
 }
 h2 {
   font-size: 2.25em;
-  font-weight: 400;
-  letter-spacing: -0.05em;
+  font-weight: 600;
+  // letter-spacing: -0.05em;
   line-height: 1;
   margin: var(--space-5) 0;
 }
