--- a/styles/global.scss
+++ b/styles/global.scss
@@ -36,14 +36,16 @@ section:last-child {
 h1 {
   font-size: 3em;
   font-weight: 600;
-  margin: var(--space-6) 0;
+  margin-top: var(--space-6);
+  margin-bottom: var(--space-2);
 }
 h2 {
-  font-size: 2.25em;
+  font-size: 2em;
   font-weight: 600;
   // letter-spacing: -0.05em;
   line-height: 1;
-  margin: var(--space-5) 0;
+  margin-top: var(--space-6);
+  margin-bottom: var(--space-4);
 }
 h3 { font-size: 1.5em; }
 h4 { font-size: 1.25em; }
@@ -70,12 +72,14 @@ p, li {
 }
 
 p {
-  margin: var(--space-3) 0;
+  margin-top: var(--space-2);
+  margin-bottom: var(--space-4);
 }
 
 ol, ul {
   list-style-position: outside;
-  margin: var(--space-2) 0;
+  margin-top: var(--space-2);
+  margin-bottom: var(--space-4);
   padding-left: var(--space-4);
 }
 
@@ -116,10 +120,6 @@ sup {
 
 em {
   font-style: italic;
-}
-
-pre {
-  margin: var(--space-4) 0 !important;
 }
 
 code {
