--- a/styles/global.scss
+++ b/styles/global.scss
@@ -20,7 +20,7 @@ body {
 main {
   height: 100%;
   min-height: 100vh;
-  padding: 0 var(--space-1);
+  padding: 0 var(--space-2);
   position: relative;
   z-index: 1;
 }
@@ -92,7 +92,8 @@ li {
 }
 
 a, a:active, a:visited {
-  border-bottom: 2px dotted;
+  border-bottom: 1.5px dotted;
+  box-sizing: border-box;
   color: inherit;
   display: inline-block;
   line-height: 95%;
@@ -100,8 +101,8 @@ a, a:active, a:visited {
   transition: all 120ms ease-in-out;
 }
 
-a:hover {
-  transform: translateY(-1px);
+a:hover, a:focus, a:visited, a.active {
+  opacity: .5;
 }
 
 sub,
