--- a/styles/global.scss
+++ b/styles/global.scss
@@ -45,7 +45,11 @@ h2 {
   margin-top: var(--space-6);
   margin-bottom: var(--space-4);
 }
-h3 { font-size: 1.5em; }
+h3 {
+  font-size: 1.5em;
+  font-weight: 300;
+  line-height: 1.2em;
+}
 h4 { font-size: 1.25em; }
 h5 { font-size: 1em; }
 h6 {
