--- a/styles/global.scss
+++ b/styles/global.scss
@@ -18,13 +18,15 @@ body {
 }
 
 main {
+  display: flex;
+  flex-direction: column;
   height: 100%;
   min-height: 100vh;
   padding: 0 var(--space-2);
 }
 
 section {
-  padding: var(--space-6) 0;
+  padding: calc(var(--space-6) * 2) 0;
 }
 
 section:last-child {
