--- a/styles/global.scss
+++ b/styles/global.scss
@@ -12,6 +12,10 @@
 /**
  * TAG STYLES
  */
+* {
+  box-sizing: border-box;
+}
+
 body {
   color: var(--text-color);
   font-family: Soehne, Helvetica, Arial, sans-serif;
@@ -52,7 +56,8 @@ h3 {
   font-size: 1.5em;
   font-weight: 300;
   line-height: 1.2em;
-  margin-top: var(--space-4);
+  margin-top: var(--space-6);
+  margin-bottom: var(--space-4);
 }
 h4 { font-size: 1.25em; }
 h5 { font-size: 1em; }
