--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -16,10 +16,12 @@
   --baby-blue: #bdd6e6;
   --black: #1a1a1a;
   --classic-blue: #0F4C81;
-  --white: #f5f5f5;
-  --transparent: transparent;
-  --yellow: #f6eb61;
+  --dark-gray: rgba(35, 35, 35, 0.6);
+  --gray: rgba(255, 255, 255, 0.6);
   --sand: #f9f8f1;
+  --transparent: transparent;
+  --white: #f5f5f5;
+  --yellow: #f6eb61;
 
   /* DEFAULT COLORS */
   --background-color: var(--white);
