--- a/styles/global.scss
+++ b/styles/global.scss
@@ -22,15 +22,12 @@ body {
 }
 
 main {
-  display: flex;
-  flex-direction: column;
   height: 100%;
   min-height: 100vh;
-  padding: 0 var(--space-2);
 }
 
 section {
-  padding: calc(var(--space-6) * 2) 0;
+  padding: calc(var(--space-6) * 2) var(--space-2);
 }
 
 section:last-child {
@@ -38,24 +35,29 @@ section:last-child {
 }
 
 h1 {
-  font-size: 3.6em;
-  font-weight: 600;
+  font-size: 2.4rem;
+  font-weight: 300;
   letter-spacing: -1px;
+  line-height: 1.1;
+  margin-top: var(--space-6);
+  margin-bottom: var(--space-2);
+  @media screen and (min-width: 999px) {
+    font-size: 4.6vw;
+  }
+}
+
+h2 {
+  font-size: 2em;
+  font-weight: 300;
+  letter-spacing: -1px;
+  line-height: 1.1;
   margin-top: var(--space-6);
   margin-bottom: var(--space-2);
 }
-h2 {
-  font-size: 2em;
-  font-weight: 600;
-  // letter-spacing: -0.05em;
-  line-height: 1;
-  margin-top: var(--space-6);
-  margin-bottom: var(--space-4);
-}
 h3 {
-  font-size: 1.5em;
+  font-size: 1.4em;
   font-weight: 300;
-  line-height: 1.2em;
+  line-height: 1.1;
   margin-top: var(--space-6);
   margin-bottom: var(--space-4);
 }
