Updating homepage ocntent.

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -18,7 +18,9 @@
   --classic-blue: #0F4C81;
   --dark-gray: rgba(35, 35, 35, 0.6);
   --gray: rgba(255, 255, 255, 0.6);
+  --lavender: #93a4ff;
   --sand: #f9f8f1;
+  --salmon: #ff867c;
   --transparent: transparent;
   --white: #f5f5f5;
   --yellow: #f6eb61;
