--- a/styles/global.scss
+++ b/styles/global.scss
@@ -27,7 +27,10 @@ main {
 }
 
 section {
-  padding: calc(var(--space-6) * 2) var(--space-2);
+  padding: calc(var(--space-6) * 3) var(--space-2);
+  @media screen and (min-width: 999px) {
+    padding: calc(var(--space-6) * 2) var(--space-2);
+ }
 }
 
 section:last-child {
@@ -77,7 +80,7 @@ h6 {
   background: yellow;
 }
 
-p, li {
+li {
   font-size: 1em;
   font-weight: 400;
   // letter-spacing: 0.025rem;
@@ -85,8 +88,12 @@ p, li {
 }
 
 p {
-  margin-top: var(--space-1);
-  margin-bottom: var(--space-3);
+  font-size: 1.2rem;
+  font-weight: 300;
+  line-height: 1.3;
+  @media screen and (min-width: 999px) {
+    font-size: 1vw;
+  }
 }
 
 ol, ul {
