--- a/styles/global.scss
+++ b/styles/global.scss
@@ -27,14 +27,10 @@ main {
 }
 
 section {
-  padding: calc(var(--space-6) * 3) var(--space-2);
+  padding: calc(var(--space-6) * 3) var(--space-2) calc(var(--space-6) * 2);
   @media screen and (min-width: 999px) {
-    padding: calc(var(--space-6) * 2) var(--space-2);
+    padding: calc(var(--space-6) * 2) var(--space-2) calc(var(--space-6) * 1);
  }
-}
-
-section:last-child {
-
 }
 
 h1 {
@@ -43,7 +39,7 @@ h1 {
   letter-spacing: -1px;
   line-height: 1.1;
   margin-top: var(--space-6);
-  margin-bottom: var(--space-2);
+  margin-bottom: var(--space-6);
   @media screen and (min-width: 999px) {
     font-size: 4.6vw;
   }
@@ -55,7 +51,7 @@ h2 {
   letter-spacing: -1px;
   line-height: 1.1;
   margin-top: var(--space-6);
-  margin-bottom: var(--space-2);
+  margin-bottom: var(--space-6);
 }
 h3 {
   font-size: 1.4em;
@@ -91,6 +87,7 @@ p {
   font-size: 1.2rem;
   font-weight: 300;
   line-height: 1.3;
+  margin-bottom: var(--space-4);
   @media screen and (min-width: 999px) {
     font-size: 1vw;
   }
