--- a/styles/global.scss
+++ b/styles/global.scss
@@ -46,16 +46,20 @@ h1 {
 }
 
 h2 {
-  font-size: 2em;
+  font-size: 1.8rem;
   font-weight: 300;
   letter-spacing: -1px;
   line-height: 1.1;
   margin-top: var(--space-6);
   margin-bottom: var(--space-6);
+  @media screen and (min-width: 999px) {
+    font-size: 2rem;
+  }
 }
 h3 {
   font-size: 1.4em;
   font-weight: 300;
+  letter-spacing: -.5px;
   line-height: 1.1;
   margin-top: var(--space-6);
   margin-bottom: var(--space-4);
@@ -152,4 +156,31 @@ code {
   font-family: Consolas, Monaco, monospace;
   font-size: .8rem;
   line-height: 1.25;
+}
+
+blockquote {
+  position: relative;
+  &::before {
+    content: '\0022';
+    position: absolute;
+    font-size: 24px;
+    font-weight: 300;
+    left: -3.5vw;
+    @media screen and (min-width: 999px) {
+      font-size: 4vw;
+    }
+  }
+  h2,h3 {
+    margin: 0;
+  }
+}
+
+q {
+  quotes: '\2018' '\2019';
+  &::before {
+    content: open-quote;
+  }
+  &::after {
+    content: close-quote;
+  }
 }
