--- a/styles/global.scss
+++ b/styles/global.scss
@@ -80,36 +80,36 @@ h6 {
   background: yellow;
 }
 
-li {
-  font-size: 1em;
-  font-weight: 400;
-  // letter-spacing: 0.025rem;
-  line-height: 1.5em;
-}
-
-p {
+p, li {
   font-size: 1.2rem;
   font-weight: 300;
   line-height: 1.3;
-  margin-bottom: var(--space-4);
   @media screen and (min-width: 999px) {
     font-size: 1vw;
   }
 }
 
-ol, ul {
-  list-style-position: outside;
-  margin-top: var(--space-2);
+p {
   margin-bottom: var(--space-4);
-  padding-left: var(--space-4);
+}
+
+ol, ul {
+  // margin-top: var(--space-1);
+  margin-bottom: var(--space-4);
+  // padding-left: var(--space-1);
+  transform: translateX(calc(var(--space-1) / -2))
 }
 
 ol {
   list-style-type: decimal;
 }
 
+ul {
+  list-style-type: '+'
+}
+
 li {
-  padding-left: var(--space-1);
+  padding-left: calc(var(--space-1) / 2);
 }
 
 a, a:active, a:visited {
