Added vincent so.

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -110,6 +110,7 @@ ul {
 
 li {
   padding-left: calc(var(--space-1) / 2);
+  margin-bottom: calc(var(--space-1) / 2);
 }
 
 a, a:active, a:visited {
