--- a/styles/global.scss
+++ b/styles/global.scss
@@ -31,6 +31,9 @@ section {
   @media screen and (min-width: 999px) {
     padding: calc(var(--space-6) * 2) var(--space-2) calc(var(--space-6) * 1);
  }
+ &:nth-of-type(even) {
+   background-color: rgba(255,255,255,0.05);
+ }
 }
 
 h1 {
