Try styled components animation keyframes.

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -26,8 +26,8 @@
   --yellow: #f6eb61;
 
   /* DEFAULT COLORS */
-  --background-color: var(--white);
-  --text-color: var(--black);
+  --background-color: var(--black);
+  --text-color: var(--white);
 
   /* SPACING */
   --space-0: 0rem;
