--- a/styles/prism-duotone-light.css
+++ b/styles/prism-duotone-light.css
@@ -48,6 +48,7 @@ code[class*="language-"]::selection, code[class*="language-"] ::selection {
 pre[class*="language-"] {
 	padding: 1em;
 	margin: .5em 0;
+	margin-bottom: var(--space-4);
 	overflow: auto;
 }
 
